# nso-icon-tool

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  compose.yaml  proj_build.sh  proj_build_ci.sh  readme.md
.github/workflows/: build-switch-release.yml  build-switch.yml
include/: version.h.in
include/activity/: main_activity.hpp
include/state/: image_state.hpp
include/util/: account.hpp  download.hpp  extract.hpp  image.hpp  paths.hpp  progress_event.hpp  uuid.hpp  zipfile.hpp
include/view/: about_view.hpp  collection_grid.hpp  download_view.hpp  empty_message.hpp  icon_part_select.hpp  icon_part_select_grid.hpp  main_view.hpp  recycling_grid.hpp  settings_view.hpp
resources/i18n/en-US/: app.json  hints.json
resources/i18n/es-419/: app.json  hints.json
resources/i18n/ja/: app.json  hints.json
resources/i18n/pt-BR/: app.json  hints.json
resources/i18n/ru/: app.json  hints.json
resources/i18n/zh-Hans/: app.json  hints.json
resources/xml/activity/: main.xml
resources/xml/cells/: icon_part_cell.xml  icon_part_cell_grid.xml
resources/xml/views/: about.xml  cell_grid.xml  download_view.xml  empty_message.xml  icon_part_select.xml  icon_part_select_grid.xml  main_view.xml  settings.xml
source/: main.cpp
source/state/: image_state.cpp
source/util/: account.cpp  download.cpp  extract.cpp  image.cpp
source/view/: about_view.cpp  collection_grid.cpp  download_view.cpp  empty_message.cpp  icon_part_select.cpp  icon_part_select_grid.cpp  main_view.cpp  recycling_grid.cpp  settings_view.cpp
